--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ requests>=2.31.0
 tqdm>=4.66.0
 
 # AI and ML
-google-generativeai>=0.8.0
+google-genai>=0.3.0
 openai-whisper==20231117
 
 # Optional: For faster-whisper backend (not primary)
