--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,97 @@
 # Video Clipper Configuration
-# Copy this file to .env and add your own API keys
+# Copy this file to .env and customize as needed
 
-# Google Gemini API Key
-# Get your key from: https://aistudio.google.com/
-GEMINI_API_KEY=your_api_key_here
+# ============================================================
+# API Keys
+# ============================================================
+
+# Required for Gemini LLM provider and Gemini transcription backend
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# ============================================================
+# Transcription Settings
+# ============================================================
+
+# Transcription backend: "openai-whisper", "faster-whisper", or "gemini"
+# Default: openai-whisper (AMD ROCm support)
+DEFAULT_TRANSCRIPTION_BACKEND=openai-whisper
+
+# Whisper model size: "tiny", "base", "small", "medium", "large", "large-v2", "large-v3"
+# Larger models are more accurate but slower and use more memory
+# Default: large-v3
+DEFAULT_WHISPER_MODEL=large-v3
+
+# Use GPU for transcription when available
+# Default: True
+DEFAULT_USE_GPU=True
+
+# GPU device selection
+# None = auto-detect first GPU
+# 0/1/etc = specific GPU index
+# -1 = force CPU mode
+# Default: None (auto-detect)
+DEFAULT_GPU_DEVICE=
+
+# Optional: Set default GPU device (alternative to DEFAULT_GPU_DEVICE)
+# This is the legacy environment variable name
+VIDEO_CLIPPER_GPU=
+
+# Convert video to MP3 before transcription for faster processing
+# Default: True
+DEFAULT_CONVERT_TO_MP3=True
+
+# ============================================================
+# LLM Settings (for clip selection)
+# ============================================================
+
+# LLM provider: "gemini" (cloud AI) or "ollama" (local)
+# Default: gemini
+DEFAULT_LLM_PROVIDER=gemini
+
+# Gemini model to use for clip selection
+# Examples: "gemini-2.5-flash", "gemini-1.5-pro", "gemini-1.5-flash"
+# Default: gemini-2.5-flash
+DEFAULT_GEMINI_MODEL=gemini-2.5-flash
+
+# Ollama model to use when LLM provider is "ollama"
+# Examples: "llama3.2", "llama3.2:70b", "mistral"
+# Default: llama3.2
+DEFAULT_OLLAMA_MODEL=llama3.2
+
+# ============================================================
+# Clip Settings
+# ============================================================
+
+# Minimum clip duration in seconds
+# Default: 300 (5 minutes)
+DEFAULT_MIN_DURATION=300
+
+# Maximum clip duration in seconds
+# Default: 900 (15 minutes)
+DEFAULT_MAX_DURATION=900
+
+# ============================================================
+# Output Settings
+# ============================================================
+
+# Output directory for clips and transcripts
+# Default: clips
+DEFAULT_OUTPUT_DIR=clips
+
+# Transcript format (only CSV is currently supported)
+# Default: csv
+DEFAULT_TRANSCRIPT_FORMAT=csv
+
+# ============================================================
+# GPU Configuration Notes
+# ============================================================
+
+# For AMD GPUs: Install PyTorch with ROCm
+#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.4
+
+# For NVIDIA GPUs: Install PyTorch with CUDA
+#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+
+# For CPU only: Install PyTorch CPU version
+#   pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+
