integrated open router and set as default for transcription processing and timestamping and clip selection

--- a/.env.example
+++ b/.env.example
@@ -44,9 +44,9 @@ DEFAULT_CONVERT_TO_MP3=True
 # LLM Settings (for clip selection)
 # ============================================================
 
-# LLM provider: "gemini" (cloud AI) or "ollama" (local)
+# LLM provider: "gemini" (cloud AI) or "ollama" (local) or "openrouter" (free cloud)
 # Default: gemini
-DEFAULT_LLM_PROVIDER=gemini
+DEFAULT_LLM_PROVIDER=openrouter
 
 # Gemini model to use for clip selection
 # Examples: "gemini-2.5-flash", "gemini-1.5-pro", "gemini-1.5-flash"
@@ -57,6 +57,18 @@ DEFAULT_GEMINI_MODEL=gemini-2.5-flash
 # Examples: "llama3.2", "llama3.2:70b", "mistral"
 # Default: llama3.2
 DEFAULT_OLLAMA_MODEL=llama3.2
+
+
+# Open Router API key (required when using openrouter provider)
+# Get your key from: https://openrouter.ai/
+OPEN_ROUTER_API_KEY=
+
+# Open Router model to use for clip selection
+# Examples: "meta-llama/llama-3.3-70b-instruct:free", "openai/gpt-4", "google/gemini-pro", "mistralai/mistral-large"
+# Default: meta-llama/llama-3.3-70b-instruct:free
+# See available models: https://openrouter.ai/models
+OPEN_ROUTER_MODEL=meta-llama/llama-3.3-70b-instruct:free
+
 
 # ============================================================
 # Clip Settings
