--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,18 @@ tqdm>=4.66.0
 
 # AI and ML
 google-genai>=0.3.0
-openai-whisper==20231117
+openai-whisper
 
 # Optional: For faster-whisper backend (not primary)
 faster-whisper>=1.0.0
 
 # GPU Support (AMD ROCm)
 # Install PyTorch with ROCm support separately:
-# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.4
+# pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/rocm6.4
 # 
 # For NVIDIA CUDA:
-# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
+# pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu126
+
 
 # Note: PyTorch must be installed before openai-whisper for GPU support
 # See README.md for detailed installation instructions
